<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Clinic</string>
    <string name="choose_a_lanugage">Choose a language</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account">Don\'t have an account</string>
    <string name="forgot_password">forgot password?</string>
    <string name="enter_your_email_below_to_reset_password">Enter your email below to reset password</string>
    <string name="enter_registered_e_mail">Enter registered email</string>
    <string name="create_your_to_book_your_appointment">CREATE AN ACCOUNT TO BOOK YOUR APPOINTMENT</string>
    <string name="we_have_found_the_following_people_registered_under_this_mobile_number">We have found the following people registered under this mobile number!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="profile_created_successfully">You have created your account successfully.Please proceed to login to create your profile</string>
    <string name="cityJeddah">Jeddah</string>
    <string name="KSA">Saudi Arabia</string>
    <string name="betaqa_no">Betaqa No</string>
    <string name="betaqa">Betaqa</string>
    <string name="Iqama">Iqama</string>
    <string name="Passport">Passport</string>
    <string name="required">Required *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Mr">Mr</string>
    <string name="Mrs">Mrs</string>
    <string name="Ms">Ms</string>
    <string name="Miss">Miss</string>
    <string name="Dr">Dr</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="national_id_exist">National Id Already Exist.</string>
    <string name="please_select_the_appointment_you_would_like_to_create">Please select the appointment you would like to create</string>
    <string name="appointment_to_visit_the_clinic">Appointment to visit the clinic</string>
    <string name="tele_consult">Tele Consultation</string>
    <string name="gender">Gender *</string>
    <string name="salutation">Salutation *</string>
    <string-array name="nationalId">
        <item>Iqama</item>
        <item>Passport</item>
    </string-array>
    <string-array name="Betaqa">
        <item>Betaqa</item>
    </string-array>
    <string name="checkout_ui_callback_scheme">myclinictele</string>
    <string name="visa">VISA</string>
    <string name="card_holder_hint">Card Holder</string>
    <string name="card_number_hint">Card Number</string>
    <string name="card_expiry_month_hint">MM</string>
    <string name="card_expiry_year_hint">YY</string>
    <string name="card_cvv_hint">CVV</string>
    <string name="bankdetail">Please enter your card details.</string>
    <string name="error_empty_fields">Please complete the missing fields.</string>
    <string name="error_message">An error occurred</string>
    <string name="date_delimiter">/</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_pay_now">Pay Now</string>
    <string name="progress_message_please_wait">Please wait…</string>
    <string name="amount">Amount :</string>
    <string name="success">000.000.000</string>
    <string name="success1">000.000.100</string>
    <string name="success2">000.100.110</string>
    <string name="success3">000.100.111</string>
    <string name="success4">000.100.112</string>
    <string name="success5">000.300.000</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_in">Check-In</string>
    <string name="api_key">AIzaSyAv-3OjerSZpRFmOlk6GFzumrM04X4vUfU</string>
    <string name="home_visit_message">Thank you. Our team will contact you shortly to arrange for the home visit.</string>
    <string name="my_clininc">My Clinic</string>
    <string name="your_lab_queuing_ticket_no">Your Lab Queuing Ticket No.</string>
    <string name="your_pharmacy_queuing_ticket_no">Your Pharmacy Queuing Ticket No.</string>
    <string name="your_pre_auth_status">Your Pre-Auth Status</string>
    <string name="select_other_days">Please select date between Sunday to Thursday.</string>
    <string name="book">BOOK</string>
    <string name="view">VIEW</string>
    <string name="cancel_appointment">Are you sure you wish to cancel this appointment?</string>
    <string name="m_clinic">My Clinic</string>
    <string name="whatsapp"><u>050 122 8111</u></string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="doctors_amp_specialities"><![CDATA[Doctors & Specialties]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="patient_digital_id">My Clinic Pass</string>
    <string name="switch_language">Switch Language</string>
    <string name="register_account">Register Account</string>
    <string name="logon">Login</string>
    <string name="device_type">20</string>
    <string name="email">Email *</string>
    <string name="password">Password *</string>
    <string name="forgot">Forgot?</string>
    <string name="remember_my_email">Remember my email</string>
    <string name="please_enter_email">Please enter the email.</string>
    <string name="please_enter_valid_email">Please enter valid email.</string>
    <string name="technical_info">Technical Info :</string>
    <string name="please_wait">Please wait...</string>
    <string name="fill_in_the_form_to_get_instant_access">Fill in the form to get instant access</string>
    <string name="_1">1</string>
    <string name="basic_details">Basic Details</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="register_your_account_through">Register your account through…</string>
    <string name="or_sign_in_through">Or sign in through…</string>
    <string name="or_set_your_password_and_register">Or set your password and register..</string>
    <string name="_2">2</string>
    <string name="verify_account">Verify Account</string>
    <string name="_3">3</string>
    <string name="confirm">Confirm</string>
    <string name="tell_us_who_you_are">Tell us who you are</string>
    <string name="mobile_number">Enter Mobile Number *</string>
    <string name="next">Next</string>
    <string name="please_enter_the_verification_code">Enter the verification code received by SMS</string>
    <string name="verification_code">Verification Code *</string>
    <string name="set_password">Set Password *</string>
    <string name="re_enter_password">Re-enter Password *</string>
    <string name="you_can_resend_request_for_sms_after_119_secs">You can resend request for SMS after 60 secs</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="name_en">Name(En)</string>
    <string name="name_ar">Name(Ar)</string>
    <string name="dob">DOB</string>
    <string name="please_enter_valid_number">Please enter the valid number.</string>
    <string name="sms_count_msg">You can resend request for SMS after </string>
    <string name="seconds"> Seconds</string>
    <string name="limit_on_password">Password should be at least 6 characters in length and have at least one number in it.</string>
    <string name="limit_on_password_6_chars">Please enter the minimum 6 character for password.</string>
    <string name="password_should_same">Password and Re-enter Password should be same.</string>
    <string name="please_select_your_profile_to_show">Please select your profile to show</string>
    <string name="select">Select</string>
    <string name="switch_profile">Switch Profile</string>
    <string name="my_account">My Account</string>
    <string name="add_patient">add patient</string>
    <string name="log_out">Logout?</string>
    <string name="follow_ups_available_0">Follow-Ups Available (0)</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="centre_of_excellence">Centre of Excellence</string>
    <string name="follow_up_without_zero">Follow-Ups Available </string>
    <string name="exit">Do you want to Exit</string>
    <string name="profile_completion_45">Profile Completion 45%</string>
    <string name="complete_your_profile_to_book_appointments">Complete your profile to book appointments</string>
    <string name="basic_information">Basic Information</string>
    <string name="first_name">First Name *</string>
    <string name="middle_name">Middle Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="date_of_birth">Date Of Birth *</string>
    <string name="mrn">MRN</string>
    <string name="city">City *</string>
    <string name="district">District</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_select_salutation">Please select salutation</string>
    <string name="please_enter_first_name">Please enter First Name</string>
    <string name="please_enter_middle_name">Please enter Middle Name</string>
    <string name="please_enter_last_name">Please enter Last Name</string>
    <string name="please_select_date_of_birth">Please select Date Of Birth</string>
    <string name="please_select_city">Please select City</string>
    <string name="profile_completion_70">Profile Completion 70%</string>
    <string name="identity_information">Identity Information</string>
    <string name="nationality">Nationality *</string>
    <string name="national_id_type">National ID Type *</string>
    <string name="national_id">National Id *</string>
    <string name="national_id1">Iqama/Passport No *</string>
    <string name="national_id_expiry_date">National ID Expiry Date *</string>
    <string name="attach_photo">Add National Card</string>
    <string name="insurance_information">Insurance Information</string>
    <string name="are_you_a_insurance_holder">Are you a Insurance Holder?</string>
    <string name="insurance_carrier">Insurance Carrier *</string>
    <string name="insurance_expiry_date">Insurance Expiry Date *</string>
    <string name="policy_no">Policy No *</string>
    <string name="membership_id_number">Membership ID Number *</string>
    <string name="carrier_name">Class/Plan *</string>
    <string name="contract_name">Contract Name *</string>
    <string name="cancel">Cancel</string>
    <string name="cash">Cash</string>
    <string name="are_you_sure_you_wish_to_pay_cash">Are you sure you wish to pay cash?</string>
    <string name="health_card">health card</string>
    <string name="are_you_sure_you_want_to_use_this_health_insurance_card">Are you sure you want to use this health insurance card?</string>
    <string name="membership_number">Membership Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="insurance_provider">Insurance Provider</string>
    <string name="axa_insurance">AXA Insurance</string>
    <string name="policy_number">Policy Number</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="add">Add</string>
    <string name="enter_hbs_value">Enter HBS value</string>
    <string name="email_sent">Email Sent</string>
    <string name="thank_you_if_your_email_is_on_file_we_will_send_you_a_link_to_reset_your_password">Thank you! If your email is on file, we will send you a link to reset your password.</string>
    <string name="do_not_remind_me_again">Do not remind me again</string>
    <string name="warningMsg">Please note if you have a fever or have travelled abroad within the past 14 days or within the Qatif region, we are unable to accept appointments at this time and you may be refused treatment if you attempt to book and do not disclose this</string>
    <string name="special_test">Special Test</string>
</resources>