<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/round_corner"
    android:layoutDirection="locale">

    <com.telemedicine.myclinic.views.BoldTextView
        android:id="@+id/myclinic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/my_clininc"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/container_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myclinic_title"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <com.telemedicine.myclinic.views.LightTextView
            android:id="@+id/add_sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:text="@string/warningMsg"
            android:textColor="@color/black" />

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/container_"
        android:background="@color/colorGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:orientation="vertical"
        android:weightSum="100">

        <com.telemedicine.myclinic.views.RegularTextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/container_"
            android:background="@color/colorGrey"
            android:visibility="gone" />

        <com.telemedicine.myclinic.views.RegularTextView
            android:id="@+id/dont_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/do_not_remind_me_again"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>


</RelativeLayout>

