<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/round_corner"
    android:layoutDirection="locale">

    <com.telemedicine.myclinic.views.BoldTextView
        android:id="@+id/myclinic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/my_clininc"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/container_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myclinic_title"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/square_corner"
        android:layoutDirection="locale"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <com.telemedicine.myclinic.views.LightEdittext
            android:id="@+id/add_sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/edit_corner"
            android:gravity="start"
            android:hint="@string/enter_hbs_value"
            android:inputType="number"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp" />

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/container_"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:orientation="horizontal"
        android:weightSum="100">

        <com.telemedicine.myclinic.views.RegularTextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="49"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <com.telemedicine.myclinic.views.RegularTextView
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="49"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/add"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="40dp"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary" />

</RelativeLayout>

