<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.telemedicine.myclinic.activities.EmailSentActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/navy_blue_circle"
            android:padding="12dp"
            android:src="@drawable/check_symbol" />

        <com.telemedicine.myclinic.views.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawablePadding="5dp"
            android:text="@string/email_sent"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <com.telemedicine.myclinic.views.LightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/thank_you_if_your_email_is_on_file_we_will_send_you_a_link_to_reset_your_password"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <com.telemedicine.myclinic.views.LightButton
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_edt"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:onClick="OK"
            android:paddingRight="10dp"
            android:text="@string/ok"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>
